--- a/style.css
+++ b/style.css
@@ -1,3 +1,44 @@
-h1 {
-    color: blue;
+#topbar{
+  margin-left:auto;
+  margin-right:auto;
+  height:auto; 
+  width:auto;
+}
+
+#logo {
+  display: block;
+  width: 100%;
+  height: 51px;
+  color: black;
+  text-align: center;
+}
+
+#logo h1 {
+  margin:auto;
+  line-height:51px;
+}
+
+body {    
+  font-family: Calibri, sans-serif;
+}
+
+#navbar {
+  width: 100%;
+  height: 50px;
+  display: block;
+}
+
+.nav{
+  border-bottom:1px solid #ccc;
+  border-width:1px 0;
+  list-style:none;
+  margin:0;
+  padding:0;
+  text-align:center;
+}
+.nav li{
+  display:inline;
+  color: #708090;
+  display:inline-block;
+  padding:10px;
 }
