--- a/style.css
+++ b/style.css
@@ -46,23 +46,73 @@ body {
   padding: 5px 20px 15px 20px; 
 }
 
-.image-row {
+body, html {
+    height: 100%;
+}
+
+/* The hero image */
+.hero-image {
+    /* Use "linear-gradient" to add a darken background effect to the image (photographer.jpg). This will make the text easier to read */
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/assets/images/egg.jpg");
+
+    /* Set a specific height */
+    height: 80%;
+
+    /* Position and center the image to scale nicely on all screens */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+/* Place text in the middle of the image */
+.hero-text {
     text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
 }
+
+.image-row {
+  padding-top: 25px;
+  text-align: center;
+}
+
+#description {
+  padding-top: 5px;
+  display: block;
+  width: 100%;
+  height: 51px;
+  color: black;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+#description h1 {
+  color: #545454;
+  margin:auto;
+  line-height:51px;
+  text-decoration: underline;
+}
+
 .image-box {
-    width: 20%;
-    padding: 1%;
-    margin: .5%;
-    background: pink;
-    display: inline-block;
-    font-size: 0; /* fixes bottom padding */
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
+  width: 20%;
+  padding: 1%;
+  margin: 3%;
+  background: pink;
+  display: inline-block;
+  font-size: 0; /* fixes bottom padding */
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
+
 .image-box img {
-    max-width: 100%;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
+  max-width: 100%;
+  -moz-border-radius: 50%;
+  -webkit-border-radius: 50%;
+  border-radius: 50%;
 }
+
