--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 #topbar{
   margin-left:auto;
   margin-right:auto;
@@ -32,8 +31,6 @@ body {
 }
 
 .nav{
-  border-bottom:1px solid #ccc;
-  border-width:1px 0;
   list-style:none;
   margin:0;
   padding:0;
@@ -109,8 +106,14 @@ body, html {
 .container {
   width: 20%;
   padding: 1%;
-  margin: 2.5%;
+  margin-left: 2.5%;
+  margin-right: 2.5%;
   display: inline-block;
+}
+
+.container .story-text {
+  width: 100%;
+  padding: 5%;
 }
 
 .container .image-box {
@@ -118,7 +121,6 @@ body, html {
   padding: 5%;
   background: #EDD8BB;
   display: inline-block;
-  border: 1px solid #EDD8BB; 
   -moz-border-radius: 50%;
   -webkit-border-radius: 50%;
   border-radius: 50%;
