--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@
   padding-top: 5px;
   display: block;
   width: 100%;
-  height: 51px;
+  height: 55px;
   color: black;
   text-align: center;
 }
@@ -63,15 +63,15 @@ body, html {
 }
 
 .hero-image h1{
-  font-size: 100px;
-  }
+  font-size: 90px;
+}
 
 /* Place text in the middle of the image */
 .hero-text {
     text-align: center;
     position: absolute;
     width: 70%;
-    top: 50%;
+    top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
@@ -90,7 +90,7 @@ body, html {
   padding-top: 5px;
   display: block;
   width: 100%;
-  height: 51px;
+  height: 65px;
   color: black;
   text-align: center;
   padding-bottom: 10px;
@@ -105,9 +105,8 @@ body, html {
 
 .container {
   width: 20%;
-  padding: 1%;
-  margin-left: 2.5%;
-  margin-right: 2.5%;
+  margin-left: 5%;
+  margin-right: 5%;
   display: inline-block;
 }
 
@@ -134,3 +133,22 @@ body, html {
   border-radius: 50%;
 }
 
+#contact {
+  width: 100%;
+}
+
+#contact #contact-info #text{
+  float: left;
+  position: relative;
+  top: 90px;
+  width: 50%;
+  height: 450px;
+  text-align: center;
+  color: #545454;
+}
+
+#social-media {
+  width: 100%;
+  float: left;
+  margin-top: 2%;
+}
