--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,10 +20,6 @@
   line-height:51px;
 }
 
-body {    
-  font-family: Calibri, sans-serif;
-}
-
 #navbar {
   width: 100%;
   height: 50px;
@@ -44,7 +40,9 @@ body {
 }
 
 body, html {
-    height: 100%;
+  height: 100%;
+  margin: 0;
+  font-family: Calibri, sans-serif;
 }
 
 /* The hero image */
