--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,3 +150,24 @@ body, html {
   float: left;
   margin-top: 2%;
 }
+
+
+#social-media #description #media-icons {
+  width: 100%;
+  height: 50px;
+  display: block;
+}
+
+a.icon-block {
+        display:inline-block;
+        width:10em;
+        float:left;
+        text-align:center;
+    }
+
+    a.icon-block i,
+    a.icon-block span {
+        display:block;
+        width:100%;
+        clear:both;
+    }
