--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,10 @@
   display:inline-block;
   padding: 5px 20px 15px 20px; 
 }
+.nav li a {
+  text-decoration: none;
+  color: #708090;
+}
 
 body, html {
   height: 100%;
@@ -80,7 +84,7 @@ body, html {
 }
 
 .image-row {
-  padding-top: 25px;
+  padding-top: 45px;
   text-align: center;
 }
 
@@ -111,6 +115,8 @@ body, html {
 .container .story-text {
   width: 100%;
   padding: 5%;
+  line-height: 1.7;
+  color: #708090;
 }
 
 .container .image-box {
@@ -133,6 +139,7 @@ body, html {
 
 #contact {
   width: 100%;
+  padding-top: 30px;
 }
 
 #contact #contact-info #text{
